# cmake_cpp_msvc

./: .gitignore  CMakeLists.txt  README.md  backup_unconfigured_justfile.cmake  compile_flags.txt  configure_justfile.cmake  justfile
.support_scripts/: backup_unconfigured_justfile.cmake  configure_justfile.cmake
pwsh-testing/: cmakecheck.ps1  oi.ps1
src/: build_linux.just  build_windows.just  config_linux.just  config_windows.just  main.cpp  template.justfile  template_config_linux.just  template_config_windows.just  template_windows.justfile
